[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tamperloom"
version = "0.1.0"
description = "Verifiable append-only audit logs for Python apps and agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
tamperloom = "tamperloom.cli:main"