[project]
name = "tamperloom"
version = "0.1.0"
description = "Verifiable append-only audit logs for Python apps and agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["audit", "logging", "security", "integrity", "tamper-evident"]
dependencies = [
    "portalocker>=2.0",
]

[project.urls]
Homepage = "https://github.com/gl1z/tamperloom"

[project.scripts]
tamperloom = "tamperloom.cli:main"